# WordcloudApp

./: README.md  app.py  gemini_helper.py  packages.txt  pyproject.toml
.devcontainer/: devcontainer.json
wordcloud_app/: app.py
wordcloud_app/characters/: .gitignore
wordcloudapp/: app.py
