[tool.poetry]
name = "wordcloudapp"
version = "0.1.0"
description = "Streamlit Wordcloud App"
authors = ["ashg555"]
readme = "README.md"
packages = [{include = "wordcloud_app"}]

[tool.poetry.dependencies]
python = ">=3.12"
wordcloud = "^1.9.4"
google-genai = "^1.20.0"
matplotlib = "^3.10.3"
streamlit = "^1.45.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"